se agrego la entidad usuario

--- a/app/Resources/views/pelicula/show.html.twig
+++ b/app/Resources/views/pelicula/show.html.twig
@@ -57,4 +57,9 @@
             {{ form_end(delete_form) }}
         </li>
     </ul>
+    {% for message in app.flashes('success') %}
+        <div class="flash-notice">
+            {{ message }}
+        </div>
+    {% endfor %}
 {% endblock %}
