crud completo de varias entidades, solo faltan dos

--- a/app/Resources/views/actor/show.html.twig
+++ b/app/Resources/views/actor/show.html.twig
@@ -1,35 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Servidor</h1>
+    <h1>Actor</h1>
 
     <table>
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ servidor.id }}</td>
+                <td>{{ actor.id }}</td>
             </tr>
             <tr>
                 <th>Nombre</th>
-                <td>{{ servidor.nombre }}</td>
+                <td>{{ actor.nombre }}</td>
             </tr>
             <tr>
-                <th>Urlpelicula</th>
-                <td>{{ servidor.urlPelicula }}</td>
-            </tr>
-            <tr>
-                <th>Peliculaid</th>
-                <td>{{ servidor.peliculaId }}</td>
+                <th>Personaje</th>
+                <td>{{ actor.personaje }}</td>
             </tr>
         </tbody>
     </table>
 
     <ul>
         <li>
-            <a href="{{ path('servidor_index') }}">Back to the list</a>
+            <a href="{{ path('actor_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('servidor_edit', { 'id': servidor.id }) }}">Edit</a>
+            <a href="{{ path('actor_edit', { 'id': actor.id }) }}">Edit</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
