--- a/app/Resources/views/imagenes/index.html.twig
+++ b/app/Resources/views/imagenes/index.html.twig
@@ -1,32 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Servidors list</h1>
+    <h1>imagenes list</h1>
 
     <table>
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
-                <th>Urlpelicula</th>
+                <th>Ruta</th>
                 <th>Peliculaid</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for servidor in servidors %}
+        {% for imagenes in imagenes %}
             <tr>
-                <td><a href="{{ path('servidor_show', { 'id': servidor.id }) }}">{{ servidor.id }}</a></td>
-                <td>{{ servidor.nombre }}</td>
-                <td>{{ servidor.urlPelicula }}</td>
-                <td>{{ servidor.peliculaId }}</td>
+                <td><a href="{{ path('imagenes_show', { 'id': imagenes.id }) }}">{{ imagenes.id }}</a></td>
+                <td>{{ imagenes.nombre }}</td>
+                <td>{{ imagenes.ruta }}</td>
+                <td>{{ imagenes.peliculaId }}</td>
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('servidor_show', { 'id': servidor.id }) }}">show</a>
+                            <a href="{{ path('imagenes_show', { 'id': imagenes.id }) }}">show</a>
                         </li>
                         <li>
-                            <a href="{{ path('servidor_edit', { 'id': servidor.id }) }}">edit</a>
+                            <a href="{{ path('imagenes_edit', { 'id': imagenes.id }) }}">edit</a>
                         </li>
                     </ul>
                 </td>
@@ -37,10 +37,10 @@
 
     <ul>
         <li>
-            <a href="{{ path('servidor_new') }}">Create a new servidor</a>
+            <a href="{{ path('imagenes_new') }}">Create a new imagenes</a>
         </li>
     </ul>
-     {% for msg in app.flashes('success') %}
+    {% for msg in app.flashes('success') %}
         <div class="alert alert-success">
             {{ msg }}
         </div>
