--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,37 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link href="{{ asset('css/materialize.min.css') }}" rel="stylesheet" />
+         <link href="{{ asset('css/estilos.css') }}" rel="stylesheet" />
+         <link href="{{ asset('https://fonts.googleapis.com/icon?family=Material+Icons') }}" rel="stylesheet" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+    
+      <header>
+      
+        <nav>
+          <div class="nav-wrapper teal darken-3">
+            <a href="#" class="brand-logo">Logo</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="/pelicula">Peliculas</a></li>
+              <li><a href="/login">Login</a></li>
+              
+            </ul>
+          </div>
+        </nav>
+        <ul class="sidenav" id="mobile-demo">
+          <li><a href="/pelicula">Peliculas</a></li>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </header>
+      
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <script type="text/javascript" src="{{ asset('js/jquery.min.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('js/materialize.min.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('js/peliculaController.js')}}"></script>
     </body>
 </html>
