--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,17 +18,24 @@
             <a href="#" class="brand-logo">Logo</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="/pelicula">Peliculas</a></li>
-              <li><a href="/login">Login</a></li>
+              <li id="li_peliculas"><a href="#">Peliculas</a></li>
+              <li id="li_login"><a href="#">Login</a></li>
               
             </ul>
           </div>
         </nav>
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="/pelicula">Peliculas</a></li>
-          <li><a href="/login">Login</a></li>
+          <li id="li_peliculas"><a href="#">Peliculas</a></li>
+          <li id="li_login"><a href="#">Login</a></li>
         </ul>
       </header>
+      <main id="contenedor">
+
+      {% block main %}{% endblock %}
+      </main>
+      <footer>
+      </footer>
+      
       
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
