--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -22,11 +22,24 @@
 
 .con_tarjeta{
     width: 150px !important;
-    margin: 12px;    
+    margin: 12px;  
+    margin: 0px 0px 3px 3px !important;  
 }
 
 .con_content{
     margin-bottom: 0px !important;
+    padding: 2px 10px 10px !important;
     
+}
+
+.titulo{
     
+    font-size: 15px !important;
+}
+.con_titulo{
+    margin-bottom: 0px !important;
+}
+
+.con_sinopsis{
+    padding: 12px !important;
 }
