--- a/app/Resources/views/usuario/login.html.twig
+++ b/app/Resources/views/usuario/login.html.twig
@@ -1,27 +1,28 @@
-
+{% extends 'base.html.twig' %}
 
 {% block main %}
 
-    <h1>index usuarios</h1>
-    {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div id="contenedor_login">
+        <h1>index usuarios</h1>
+        {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <form action="{{ path('login') }}" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
-        
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="_password" />
+            
+            {#
+                If you want to control the URL the user
+                is redirected to on success (more details below)
+                <input type="hidden" name="_target_path" value="/account" />
+            #}
 
-        <button type="submit">login</button>
-    </form>
-
+            <button type="submit">login</button>
+        </form>
+    </div>
 {% endblock %}
 
