--- a/app/Resources/views/usuario/registro.html.twig
+++ b/app/Resources/views/usuario/registro.html.twig
@@ -1,12 +1,14 @@
 
 {% extends 'base.html.twig' %}
-{% block body %}
-  {{ form_start(form) }}
-      {{ form_row(form.username) }}
-      {{ form_row(form.email) }}
-      {{ form_row(form.plainPassword.first) }}
-      {{ form_row(form.plainPassword.second) }}
+{% block main %}
+  <div id="contenedor_registro">
+    {{ form_start(form) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.email) }}
+        {{ form_row(form.plainPassword.first) }}
+        {{ form_row(form.plainPassword.second) }}
 
-      <button type="submit">Register!</button>
-  {{ form_end(form) }}
+        <button type="submit">Register!</button>
+    {{ form_end(form) }}
+  </div>
 {% endblock %}
