--- a/app/Resources/views/usuario/login.html.twig
+++ b/app/Resources/views/usuario/login.html.twig
@@ -1,26 +1,39 @@
 {% extends 'base.html.twig' %}
 {% block main %}
-    <div id="contenedor_login">
-        <h1>index usuarios</h1>
+    <div id="contenedor_login" >
+        
         {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
+        <div class="row">
+        <div class="col l4"></div>
+        <div class="col m12 l4 center">
+            <div id="contenedor_form" class="z-depth-2">
+                <h2>Iniciar Sesión</h2>
+                <form action="{{ path('login') }}" method="post">
+                    <div class="input-field">
+                        <i class="material-icons prefix">account_circle</i>
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                    </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">vpn_key</i>
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="_password" />
+                    </div>
+                    {#
+                        If you want to control the URL the user
+                        is redirected to on success (more details below)
+                        <input type="hidden" name="_target_path" value="/account" />
+                    #}
 
-        <form action="{{ path('login') }}" method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                    <button class="btn teal darken-4 waves-effect waves-light" type="submit">login</button>
+                </form>
+            </div>
+        </div>
+        <div class="col l4"></div>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="_password" />
-            
-            {#
-                If you want to control the URL the user
-                is redirected to on success (more details below)
-                <input type="hidden" name="_target_path" value="/account" />
-            #}
-
-            <button type="submit">login</button>
-        </form>
+        </div>
     </div>
 {% endblock %}
 
