--- a/app/Resources/views/usuario/registro.html.twig
+++ b/app/Resources/views/usuario/registro.html.twig
@@ -2,13 +2,37 @@
 {% extends 'base.html.twig' %}
 {% block main %}
   <div id="contenedor_registro">
-    {{ form_start(form) }}
-        {{ form_row(form.username) }}
-        {{ form_row(form.email) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
-
-        <button type="submit">Register!</button>
-    {{ form_end(form) }}
+    <div class="row">
+      <div class="col l4"></div>
+        <div class="col m12 l4 ">
+          <div id="contenedorFormRegistro" class="z-depth-2">
+            <h3>Registrarse</h3>
+            {{ form_start(form) }}
+                <div class="input-field">
+                  {{ form_label(form.username) }}
+                  {{ form_errors(form.username) }}
+                  {{ form_widget(form.username) }}
+                </div>
+                <div class="input-field">
+                  {{ form_label(form.email) }}
+                  {{ form_errors(form.email) }}
+                  {{ form_widget(form.email) }}
+                </div>
+                <div class="input-field">
+                  {{ form_label(form.plainPassword.first) }}
+                  {{ form_errors(form.plainPassword.first) }}  
+                  {{ form_widget(form.plainPassword.first) }}
+                </div>
+                <div class="input-field">
+                  {{ form_label(form.plainPassword.second) }}
+                  {{ form_errors(form.plainPassword.second) }}
+                  {{ form_widget(form.plainPassword.second) }}
+                </div>
+                <button  class="btn teal darken-4 waves-effect waves-light" type="submit">Registrar</button>
+            {{ form_end(form) }}
+          </div>  
+        </div>  
+        <div class="col l4"></div> 
+    </div>    
   </div>
 {% endblock %}
