--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -44,8 +44,14 @@
     padding: 12px !important;
 }
 
-#contenedor_form{
+#contenedorFormLogin{
     margin-top: 60px;
+    padding: 10px 20px 50px 20px;
+    border-radius: 10px;
+    
+}
+#contenedorFormRegistro{
+    margin-top: 40px;
     padding: 10px 20px 50px 20px;
     border-radius: 10px;
     
