se agrego ajax para el registro de usuarios

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
               <li class="inicio" ><a href="#inicio">Inicio</a></li>
               <li class="peliculas" ><a href="#peliculas">Peliculas</a></li>
               <li class="series" ><a href="#series">Series</a></li>
-              <li class="registro" ><a href="/registro">Registrarse</a></li>
+              <li class="registro" ><a href="#registro">Registrarse</a></li>
               <li class="login" ><a href="#login">Entrar</a></li>
             </ul>
           </div>
