--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,5 +3,6 @@
 {% block main %}
     <div id="contenedor_inicio">
         <h2>Home!!</h2>
+        <button id="hola">hola</button>
     </div>
 {% endblock %}
