--- a/app/Resources/views/usuario/registro.html.twig
+++ b/app/Resources/views/usuario/registro.html.twig
@@ -5,8 +5,10 @@
     <div class="row">
       <div class="col l4"></div>
         <div class="col m12 l4 ">
+          
           <div id="contenedorFormRegistro" class="z-depth-2">
             <h3>Registrarse</h3>
+            
             {{ form_start(form) }}
                 <div class="input-field">
                   {{ form_label(form.username) }}
@@ -28,8 +30,8 @@
                   {{ form_errors(form.plainPassword.second) }}
                   {{ form_widget(form.plainPassword.second) }}
                 </div>
-                <button  class="btn teal darken-4 waves-effect waves-light" type="submit">Registrar</button>
-            {{ form_end(form) }}
+                <button id="btn_registrarUsuario" class="btn teal darken-4 waves-effect waves-light" type="submit">Registrar</button>
+            {{ form_end(form)}}
           </div>  
         </div>  
         <div class="col l4"></div> 
