--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,11 +31,11 @@
           <li class="inicio" ><a href="#inicio">Inicio<i class=" Tiny material-icons">home</i></a></li>
           <li class="peliculas" ><a href="#peliculas">Peliculas<i class=" Tiny material-icons">movie</i></a></li>
           <li class="series" ><a href="#series">Series<i class=" Tiny material-icons">playlist_play</i></a></li>
-          <li class="registro" ><a href="usuario/registro">Registrarse<i class=" Tiny material-icons">person_add</i></a></li>
+          <li class="registro" ><a href="#registro">Registrarse<i class=" Tiny material-icons">person_add</i></a></li>
           <li class="login" ><a href="#login">Entrar<i class=" Tiny material-icons">account_box</i></a></li>
-        </ul>     
+        </ul>
       </header>
-     
+
 
       <main id="contenedor">
 
@@ -43,8 +43,8 @@
       </main>
       <footer>
       </footer>
-      
-      
+
+
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <script type="text/javascript" src="{{ asset('js/jquery.min.js')}}"></script>
