registro de usuarios con ajax 80%

--- a/app/Resources/views/pelicula/new.html.twig
+++ b/app/Resources/views/pelicula/new.html.twig
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('pelicula_index') }}">Back to the list</a>
+            <a href="">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
