configuracion de vue js

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
 
           
         {% block body %}{% endblock %}
-        <script src="{{ asset('build/app.js')}}"></script>
+        <script src="{{ asset('public/build/app.js')}}"></script>
         {% block javascripts %}
           <script type="text/javascript" src="{{ asset('js/jquery.min.js')}}"></script>
           <script type="text/javascript" src="{{ asset('js/materialize.min.js')}}"></script>
