--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-    <div id="contenedor_inicio">
-        <h2>Home!!</h2>
+    <div id="app">
+        <App/>
       
     </div>
 {% endblock %}
